# favgallery

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  DEPLOY.md  Dockerfile  Procfile  README.md  docker-compose.yml  favgallery.spec  nixpacks.toml  pyproject.toml  tailwind.config.js
docs/: perf-baseline.md  smoke-checklist.md
docs/plans/: 2026-06-10-rename-to-favgallery.md  2026-06-13-ui-refresh.md
docs/specs/: 2026-06-06-in-app-cookie-management.md  2026-06-13-ui-refresh-design.md  2026-06-22-following-retry-design.md  2026-06-24-pwa-install-design.md
scripts/: check_icons.mjs  check_js.mjs  check_load.mjs  check_modules.mjs  demo_preview.py  gen_pwa_icons.py  perf_baseline.py  tailwind.input.css
src/favgallery/: __init__.py  __main__.py  book_dedup.py  book_importer.py  cli.py  context.py  db.py  dedup.py  gallerydl.py  gallerydl_config.py  keys.py  like.py  paths.py  payloads.py  proxy.py  r2.py  save_one.py  scanner.py  server.py  sync.py  thumbs.py  timeline.py  x_helpers.py
src/xlikes_viewer/: __init__.py  book_dedup.py  cli.py  context.py  db.py  dedup.py  gallerydl.py  gallerydl_config.py  gdl_errors.py  paths.py  proxy.py  r2.py  scanner.py  scrapers.py  server.py  sync.py  thumbs.py  timeline.py
tests/: conftest.py  test_admin_api.py  test_autosync_env.py  test_book_dedup.py  test_book_features.py  test_book_importer.py  test_book_tags_endpoint.py  test_cookies_api.py  test_db.py  test_dedup.py  test_dedup_api.py  test_delete_post.py  test_favorite_authors.py  test_gallerydl_config.py  test_gdl_errors.py  test_keys.py  test_lists_api.py  test_media_guard.py  test_proxy.py  test_proxy_reload.py  test_r2.py  test_scanner.py  test_scrapers.py  test_server.py  test_smoke_api.py  test_sync_helpers.py  test_sync_runner.py  test_timeline.py
(+35 files in other folders)
